--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,9 @@
 name: Python package
 
-on: [push]
-
+on:
+  push:
+    branches:
+      - 'feature/**'
 jobs:
   build:
 
@@ -20,6 +22,18 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      - name: Lint with flake8
+        run: |
+          pip install flake8
+          flake8 .
+        continue-on-error: true
       - name: Test with pytest
         run: |
-          pytest -q test_wallet.py
+          pytest -q test_wallet.py --doctest-modules --junitxml=junit/test-results-${{ matrix.python-version }}.xml
+      - name: Upload pytest test results
+        uses: actions/upload-artifact@v3
+        with:
+          name: pytest-results-${{ matrix.python-version }}
+          path: junit/test-results-${{ matrix.python-version }}.xml
+        # Use always() to always run this step to publish test results when there are test failures
+        if: ${{ always() }}
