--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,3 +37,30 @@ jobs:
           path: junit/test-results-${{ matrix.python-version }}.xml
         # Use always() to always run this step to publish test results when there are test failures
         if: ${{ always() }}
+  release:
+    needs: build
+    name: Deploy to staging
+    environment:
+        name: staging
+    runs-on: ubuntu-latest
+    steps:
+    # Deploy to App Service Linux
+    - name: Deploy to Azure WebApp
+      uses: azure/webapps-deploy@v2
+      id: deploy_staging
+      with:
+        app-name: ${{ env.AZURE_WEBAPP_NAME }}
+        publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
+        slot-name: staging
+
+    -  name: Set up Python ${{ matrix.python-version }}
+       uses: actions/setup-python@v4
+       with:
+         python-version: ${{ matrix.python-version }}
+    -  name: Install dependencies
+       run: |
+         python -m pip install --upgrade pip
+         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    -  name: Test with pytest
+       run: |
+         pytest -q test_wallet.py
