--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.7", "3.8"]
+        python-version: ["3.7"]
     steps:
     -  name: Set up Python ${{ matrix.python-version }}
        uses: actions/setup-python@v4
@@ -55,9 +55,6 @@ jobs:
        run: |
          python -m pip install --upgrade pip
          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    -  name: Test with pytest
-       run: |
-         pytest -q test_wallet.py
   release:
     needs: homologacao
     name: creating feature candidate
