--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,13 +62,23 @@ jobs:
       name: release
     runs-on: ubuntu-latest
     steps:
-    - name: git create branch
-      uses: peterjgrainger/action-create-branch@v2.0.1
-      env:
-        GITHUB_TOKEN: ${{ secrets.TOKEN }}
+    - name: Checkout
+      uses: actions/checkout@v3
       with:
-        branch: 'feature-candidate'
-        sha: '${{ github.event.pull_request.head.sha }}'
+        path: main
+    - name: creating feature branch
+      uses: peterjgrainger/action-create-branch@v2.2.0
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        branch: feature-candidate/${{ github.head_ref }}
+    # - name: Create Pull Request
+    #   uses: peter-evans/create-pull-request@v4
+    #   env:
+    #     GITHUB_TOKEN: ${{ secrets.token }}
+    #   with:
+    #     base: feature-candidate/${{ github.head_ref }}
+    #     delete-branch: false
       
 
     
