--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,17 +1,14 @@
 name: Python package
-
 on:
   push:
     branches:
       - 'feature/**'
 jobs:
   build:
-
     runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: ["3.7", "3.8"]
-
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
@@ -35,11 +32,10 @@ jobs:
         with:
           name: pytest-results-${{ matrix.python-version }}
           path: junit/test-results-${{ matrix.python-version }}.xml
-        # Use always() to always run this step to publish test results when there are test failures
         if: ${{ always() }}
   homologacao:
     needs: build
-    name: Deploy to staging
+    name: Create instance to Zappts
     environment:
         name: release
     runs-on: ubuntu-latest
@@ -57,22 +53,17 @@ jobs:
          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
   release:
     needs: homologacao
-    name: creating feature candidate
+    name: Empacotando feature candidate
     environment:
       name: release
     runs-on: ubuntu-latest
     steps:
-    - name: checkout
-      uses: actions/checkout@v3
-      with:
-        ref: main
-    - name: Create Pull Request
-      uses: peter-evans/create-pull-request@v4
+    - name: creating feature candidate
+      uses: peterjgrainger/action-create-branch@v2.2.0
       env:
-        GITHUB_TOKEN: ${{ secrets.token }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        base: '${{ github.event.pull_request.head.sha }}'
-        delete-branch: false
-      
+        branch: '${{ github.event.repository.updated_at}}'
+        sha: '${{ github.event.pull_request.head.sha }}'
 
     
