--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,7 +53,7 @@ jobs:
          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
   release:
     needs: homologacao
-    name: Empacotando feature candidate
+    name: Feature ready
     environment:
       name: release
     runs-on: ubuntu-latest
@@ -63,7 +63,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        branch: '${{ github.event.repository.updated_at}}'
+        branch: 'rc-${{  github.sha  }}'
         sha: '${{ github.event.pull_request.head.sha }}'
 
     
