--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,7 @@ jobs:
         branch: 'rc-${{  github.sha  }}'
         sha: '${{ github.event.pull_request.head.sha }}'
     - name: Generate release tag
-      uses: amitsingh-007/next-release-tag@v1.0.0
+      uses: amitsingh-007/next-release-tag@vv2.1.0
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
     - name: Create Release
