--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
     needs: build
     name: Create instance to Zappts
     environment:
-        name: release
+        name: qa
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -58,6 +58,10 @@ jobs:
       name: release
     runs-on: ubuntu-latest
     steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+      with:
+        path: main
     - name: creating feature candidate
       uses: peterjgrainger/action-create-branch@v2.2.0
       env:
@@ -65,6 +69,9 @@ jobs:
       with:
         branch: 'rc-${{  github.sha  }}'
         sha: '${{ github.event.pull_request.head.sha }}'
+########################################################################################################
+######Criando tag - depois necessário mudar para utilizar versionamento correto
+########################################################################################################
     - name: Create tag
       uses: actions/github-script@v5
       with:
@@ -75,3 +82,4 @@ jobs:
             ref: 'refs/tags/rc-${{  github.sha  }},
             sha: context.sha
           })
+########################################################################################################
