--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,7 +61,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
       with:
-        path: main
+        ref: main
     - name: creating feature candidate
       uses: peterjgrainger/action-create-branch@v2.2.0
       env:
@@ -72,14 +72,14 @@ jobs:
 ########################################################################################################
 ######Criando tag - depois necessário mudar para utilizar versionamento correto
 ########################################################################################################
-    - name: Create tag
-      uses: actions/github-script@v5
-      with:
-        script: |
-          github.rest.git.createRef({
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            ref: 'refs/tags/rc-${{  github.sha  }},
-            sha: context.sha
-          })
-########################################################################################################
+#     - name: Create tag
+#       uses: actions/github-script@v5
+#       with:
+#         script: |
+#           github.rest.git.createRef({
+#             owner: context.repo.owner,
+#             repo: context.repo.repo,
+#             ref: 'refs/tags/rc-${{  github.sha  }},
+#             sha: context.sha
+#           })
+# ########################################################################################################
