--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
         if: ${{ always() }}
   homologacao:
     needs: build
-    name: Create instance to Zappts
+    name: Create instance to Zappts team
     environment:
         name: qa
     runs-on: ubuntu-latest
@@ -58,10 +58,23 @@ jobs:
       name: release
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v3
+    # - name: Checkout
+    #   uses: actions/checkout@v3
+    #   with:
+    #     ref: main
+    - name: Git checkout
+      uses: actions/checkout@v2
       with:
-        ref: main
+        fetch-depth: '0'
+    - name: git
+      run: |
+        # setup the username and email. I tend to use 'GitHub Actions Bot' with no email by default
+        git --version
+        git config user.name "GitHub Actions Bot"
+        git config user.email "<steff.vasem@gmail.com"
+        git status
+        git tag
+        git describe
     - name: creating feature candidate
       uses: peterjgrainger/action-create-branch@v2.2.0
       env:
