--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,8 +72,9 @@ jobs:
         git --version
         git config user.name "GitHub Actions Bot"
         git config user.email "<steff.vasem@gmail.com"
-        git checkout -b teste
-        git push --set-upstream origin teste
+        git checkout -b test1
+        git push --set-upstream origin teste1
+        git push origin --delete teste
     - name: creating feature candidate
       uses: peterjgrainger/action-create-branch@v2.2.0
       env:
