--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,8 @@ on:
       - 'feature/**'
 jobs:
   build:
+    environment:
+        name: feature
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -35,7 +37,7 @@ jobs:
         if: ${{ always() }}
   homologacao:
     needs: build
-    name: Create instance to Zappts team
+    name: Publish QA instance
     environment:
         name: qa
     runs-on: ubuntu-latest
@@ -51,17 +53,31 @@ jobs:
        run: |
          python -m pip install --upgrade pip
          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-  release:
+  zappts:
     needs: homologacao
+    name: Publish Zappts instance
+    environment:
+        name: zappts
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.7"]
+    steps:
+    -  name: Set up Python ${{ matrix.python-version }}
+       uses: actions/setup-python@v4
+       with:
+         python-version: ${{ matrix.python-version }}
+    -  name: Install dependencies
+       run: |
+         python -m pip install --upgrade pip
+         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+  release:
+    needs: zappts
     name: Feature ready
     environment:
-      name: release
+      name: zappts
     runs-on: ubuntu-latest
     steps:
-    # - name: Checkout
-    #   uses: actions/checkout@v3
-    #   with:
-    #     ref: main
     - name: Git checkout
       uses: actions/checkout@v2
       with:
@@ -72,16 +88,21 @@ jobs:
         git --version
         git config user.name "GitHub Actions Bot"
         git config user.email "<steff.vasem@gmail.com"
-        git checkout -b teste1
-        git push --set-upstream origin teste1
-        git push origin --delete teste
-    - name: creating feature candidate
-      uses: peterjgrainger/action-create-branch@v2.2.0
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        branch: 'rc-${{  github.sha  }}'
-        sha: '${{ github.event.pull_request.head.sha }}'
+        git checkout -b fc/teste11
+        git push --set-upstream origin fc/teste11
+        git push origin --delete feature/teste
+#realizar a criação da branch fc/xyz
+#Deletar a branch feature/xyz
+    - name: git
+      run: |
+        # setup the username and email. I tend to use 'GitHub Actions Bot' with no email by default
+        git --version
+        git config user.name "GitHub Actions Bot"
+        git config user.email "<steff.vasem@gmail.com"
+        git checkout -b fc/teste1
+        git push --set-upstream origin fc/teste1
+        git push origin --delete feature/teste
+
 ########################################################################################################
 ######Criando tag - depois necessário mudar para utilizar versionamento correto
 ########################################################################################################
