--- a/.github/workflows/feature-enviroment.yml
+++ b/.github/workflows/feature-enviroment.yml
@@ -16,3 +16,22 @@ on:
         description: Include  emojis
       environment:
         type: feature
+
+jobs:
+  build:
+    environment:
+        name: feature
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.7", "3.8"]
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
