--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -1,23 +1,33 @@
-name: Testing inputs
-
 on:
   workflow_dispatch:
     inputs:
-      zappts_approve:
-        description: 'Feature ready?'
+      logLevel:
+        description: 'Log level'
         required: true
-        default: 'true'
+        default: 'warning'
+        type: choice
+        options:
+        - info
+        - warning
+        - debug
+      tags:
+        description: 'Test scenario tags'
+        required: false
+        type: boolean
+      environment:
+        description: 'Environment to run tests against'
+        type: environment
+        required: true
 
 jobs:
-  teste:
+  log-the-inputs:
     runs-on: ubuntu-latest
     steps:
-      - if: github.event.inputs.zappts_approve == 'true'
-        name: Creating feature approved
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      - run: |
+          echo "Log level: $LEVEL"
+          echo "Tags: $TAGS"
+          echo "Environment: $ENVIRONMENT"
+        env:
+          LEVEL: ${{ inputs.logLevel }}
+          TAGS: ${{ inputs.tags }}
+          ENVIRONMENT: ${{ inputs.environment }}
