--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -19,6 +19,7 @@ on:
         description: 'Environment to run tests against'
         type: environment
         required: true
+    push:
 
 jobs:
   log-the-inputs:
