--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -1,35 +1,30 @@
-name: 'My Workflow'
+name: Inputs to generate feature candidate
+
 on:
   workflow_dispatch:
     inputs:
-      logLevel:
-        description: 'Log level'
+      zappts_approve:
+        description: 'Zappts approved?'
         required: true
-        default: 'warning'
+        default: 'false'
+    name:
         type: choice
-        options:
-        - info
-        - warning
-        - debug
-      tags:
-        description: 'Test scenario tags'
-        required: false
-        type: boolean
-      environment:
-        description: 'Environment to run tests against'
-        type: environment
-        required: true
-    push:
+        description: 
+        options: 
+        - teste
+        - cschleiden
 
 jobs:
-  log-the-inputs:
+  teste:
     runs-on: ubuntu-latest
     steps:
-      - run: |
-          echo "Log level: $LEVEL"
-          echo "Tags: $TAGS"
-          echo "Environment: $ENVIRONMENT"
-        env:
-          LEVEL: ${{ inputs.logLevel }}
-          TAGS: ${{ inputs.tags }}
-          ENVIRONMENT: ${{ inputs.environment }}
+      - if: github.event.inputs.zappts_approve == 'true'
+        name: Creating feature approved
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+##deletar versão publicada em dev, qa e zappts
