--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -9,7 +9,7 @@ on:
         default: 'false'
     name:
         type: choice
-        description: 
+        description:  selecione
         options: 
         - teste
         - cschleiden
