--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -97,7 +97,7 @@ jobs:
     name:  promote-to-main
     environment:
       name: production
-    needs: release
+    needs: publish-release
     runs-on: ubuntu-latest
     steps:
     - name: Git checkout
