--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Creating new version
+name: Creating a new version
 on:
   workflow_dispatch:
     inputs:
@@ -92,23 +92,3 @@ jobs:
         git --version
         git config user.name "GitHub Actions Bot"
         git config user.email "<steff.vasem@gmail.com"
-#Verificar trigger para depender mas poder promover sozinho
-  promotion-to-main:
-    name:  promote-to-main
-    environment:
-      name: production
-    needs: publish-release
-    runs-on: ubuntu-latest
-    steps:
-    - name: Git checkout
-      uses: actions/checkout@v2
-      with:
-        fetch-depth: '0'
-    - name: git
-      run: |
-        git config user.name "GitHub Actions Bot"
-        git config user.email "<steff.vasem@gmail.com"
-        git checkout main
-        git merge --squash v"${{ github.event.inputs.tag }}"
-        git commit
-        git push --set-upstream origin main
