--- a/.github/workflows/deploy-prd.yml
+++ b/.github/workflows/deploy-prd.yml
@@ -5,6 +5,26 @@ on:
       - 'main'
 jobs:
 ###
+#Verificar trigger para depender mas poder promover sozinho
+  promotion-to-main:
+    name:  promote-to-main
+    environment:
+      name: production
+    needs: publish-release
+    runs-on: ubuntu-latest
+    steps:
+    - name: Git checkout
+      uses: actions/checkout@v2
+      with:
+        fetch-depth: '0'
+    - name: git
+      run: |
+        git config user.name "GitHub Actions Bot"
+        git config user.email "<steff.vasem@gmail.com"
+        git checkout main
+        git merge --squash v"${{ github.event.inputs.tag }}"
+        git commit
+        git push --set-upstream origin main
 #Triggar de acordo com última tag commitada
 #Ai deploya o código da tag comida a instância no app engine e promove para ser a consumida pelo pessoal do super app.
 #Triggar com commit na main
